--- a/prueba1/www/templates/categories.html
+++ b/prueba1/www/templates/categories.html
@@ -10,11 +10,11 @@
 			<div class="col col-90 "  style="padding:1px;border-right:1px solid #999" >
 
 				  <div class="item item-image" style="border-width: 0px; border-style: none;">
-					<img ng-click="showProductInfo(item.cat_id)" ng-src="{{'img/fk/'+ '' +'.jpg'}}" width="100%" />
+					<img ng-click="showProductInfo()" ng-src="{{'img/fk/'+ '' +'.jpg'}}" width="100%" />
 				  </div>
 
 				  <a class="item item-icon-right assertive" href="#"  style="border-width: 0px; border-style: none;" >
-					<p ng-click="showProductInfo(item.cat_id)" style="font-size: 12px;text-align:left;">
+					<p ng-click="showProductInfo()" style="font-size: 12px;text-align:left;">
                                            {{item.cat_nombre}} <br/>
 						
 					</p>
