--- a/prueba1/www/templates/menucat.html
+++ b/prueba1/www/templates/menucat.html
@@ -8,7 +8,7 @@
 			<div class="col col-50 " ng-if="$index < menu.length" style="padding:1px;border-right:1px solid #999" >
 
 				  <div class="item item-image" style="border-width: 0px; border-style: none;">
-					<img ng-click="showProductInfo(menu[$index].$prod_id)" ng-src="{{'img/fk/'+ menu[$index].prod_imagen }}" width="100%" />
+					<img ng-click="showProductInfo(menu[$index].$prod_id)" ng-src="{{url+'/'+ menu[$index].prod_imagen }}" width="100%" />
 				  </div>
 
 				  <a class="item item-icon-right assertive" href="#"  style="border-width: 0px; border-style: none;" >
@@ -25,7 +25,7 @@
 			<div class="col col-50 " ng-if="$index+1  < menu.length" style="padding:1px;">
 
 				  <div class="item item-image" style="border-width: 0px; border-style: none;">
-					<img ng-click="showProductInfo(menu[$index+1].$prod_id)" ng-src="{{'img/productos/'+ menu[$index+1].prod_imagen }}" width="100%" />
+					<img ng-click="showProductInfo(menu[$index+1].$prod_id)" ng-src="{{url +'/'+ menu[$index+1].prod_imagen }}" width="100%" />
 				  </div>
 
 				  <a class="item item-icon-right assertive" href="#"  style="border-width: 0px; border-style: none;" >
