--- a/prueba1/www/templates/productodetalle.html
+++ b/prueba1/www/templates/productodetalle.html
@@ -27,7 +27,7 @@
             </ion-radio>
             <div>
                 <h4>Opciones y Adicionales</h4>
-                <p>Selecione una opcion para incluir</p>
+                <p>Selecione una opcion y agregue al pedido</p>
             </div>
             <ion-list>
 
