--- a/prueba1/www/templates/shopping_cart.html
+++ b/prueba1/www/templates/shopping_cart.html
@@ -1,43 +1,45 @@
 <ion-view style="" class=" " id="page19" title="Su Pedido">
-    <ion-header-bar align-title="center" class="bar-light">
-        <ion-nav-bar align-title="center">
-            <ion-nav-buttons>
-                <button class="button button-clear button-icon" ng-click="goBack()" ><i class="ion-chevron-left"></i></button>
-            </ion-nav-buttons>
-        </ion-nav-bar>
-    </ion-header-bar>
-    <ion-content>
+
+    <ion-content class="has-header" padding="true">
         <div class="cate-lv2">
             <div class="card cate-lv2-item" ng-repeat="item in cart">
                 <div class="item item-thumbnail-left item-text-wrap">
                     <img ng-src="{{'img/productos/' + item.producto.prod_imagen}}" />
 
-                    <h2>{{item.producto.prod_nombre}}</h2>
+                    <h2>{{item.producto.prod_nombre}}</h2>                   
+                    <p class="text-left">
+                        {{item.variedad.var_nombre}}: {{ item.variedad.var_precio | currency : item.currency : 2 }} </p>
+
+                    <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
+                        {{comp.com_nombre}}: {{comp.com_precio| currency : comp.currency : 2 }}
+                    </p> 
                     
-                    <p>{{item.variedad.var_nombre}}</p>
-                    
-                    <div class="product-info">
+                     <div class="product-info">
                         <div class="price">{{item.price}}</div>
                         <p>x</p>
                         <input type="number" class="input-qty" placeholder="" value="{{item.qty}}" />
                         <a class="product-delete"><i class="ion-android-delete"></i></a>
                     </div>
                 </div>
+                
+
+
             </div>
+
         </div>
         <div class="total-prices">
             <strong>Subtotal</strong>
-            <span>$453</span>
+            <span>${{subtotal}}</span>
             <div class="clearfix"></div>
         </div>
         <div class="total-prices">
-            <strong>Shipping</strong>
-            <span>$5</span>
+            <strong>Envio</strong>
+            <span>$10</span>
             <div class="clearfix"></div>
         </div>
         <div class="total-prices">
             <strong>Total</strong>
-            <span>$458</span>
+            <span>${{total}}</span>
             <div class="clearfix"></div>
         </div>
         <div class="btn-checkout">
@@ -47,4 +49,3 @@
         </div>
     </ion-content>
 </ion-view>
-
