--- a/prueba1/www/templates/shopping_cart.html
+++ b/prueba1/www/templates/shopping_cart.html
@@ -43,7 +43,7 @@
             <div class="clearfix"></div>
         </div>
         <div class="btn-checkout">
-            <button class="button button-block button-balanced">
+            <button class="button button-block button-balanced" ng-click="checkout()">
                 Checkout
             </button>
         </div>
