--- a/prueba1/www/templates/shopping_cart.html
+++ b/prueba1/www/templates/shopping_cart.html
@@ -1,18 +1,19 @@
 <ion-view style="" class=" " id="page19" title="Su Pedido">
 
     <ion-content class="has-header" padding="true">
+        <div  ng-repeat="item in cart">
         <div class="cate-lv2">
-            <div class="card cate-lv2-item" ng-repeat="item in cart">
+            <div class="card cate-lv2-item">
                 <div class="item item-thumbnail-left item-text-wrap">
                     <img ng-src="{{'img/productos/' + item.producto.prod_imagen}}" />
 
                     <h2>{{item.producto.prod_nombre}}</h2>                   
                     <p class="text-left">
                         {{item.variedad.var_nombre}}: {{ item.variedad.var_precio | currency : item.currency : 2 }} </p>
-
-                    <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
+<!--DADAD -->
+                   <!-- <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
                         {{comp.com_nombre}}: {{comp.com_precio| currency : comp.currency : 2 }}
-                    </p> 
+                    </p> -->
                     
                      <div class="product-info">
                         <div class="price">{{item.price}}</div>
@@ -21,10 +22,30 @@
                         <a class="product-delete"><i class="ion-android-delete"></i></a>
                     </div>
                 </div>
+               
                 
-
-
+                
             </div>
+            
+             <div class="card cate-lv2-item" ng-repeat="item2 in item.componentes.items">
+             <div class="item item-thumbnail-left item-text-wrap" >
+                    <img ng-src="{{'img/componentes/' + item2.com_imagen}}" />
+
+                    <h2>{{item2.com_nombre}}</h2>                                     
+<!--DADAD -->
+                   <!-- <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
+                        {{comp.com_nombre}}: {{comp.com_precio| currency : comp.currency : 2 }}
+                    </p> -->
+                    
+                     <div class="product-info">
+                        <div class="price">{{item2.com_precio}}</div>
+                        <p>x</p>
+                        <input type="number" class="input-qty" placeholder="" value="1" />
+                        <a class="product-delete"><i class="ion-android-delete"></i></a>
+                    </div>
+                </div>
+             </div>
+             </div>
 
         </div>
         <div class="total-prices">
