--- a/prueba1/www/templates/productodetalle.html
+++ b/prueba1/www/templates/productodetalle.html
@@ -7,15 +7,16 @@
 
     <ion-content class="has-header" padding="false"  ng-init="loadDetalle()"  >
 
-        <ion-slide-box>
+       <ion-slide-box>
             <ion-slide>
-                <div class="box blue"><img ng-src="{{'img/productos/' + producto.prod_imagen}}"/></div>
+                <div class="box blue"><img ng-src="{{ urlpro +'/' + producto.prod_imagen}}"/></div>
             </ion-slide>
-        </ion-slide-box>
+        </ion-slide-box> 
         <div class="content-inner">
+            
             <h3>{{producto.prod_nombre}}</h3>
             <p class="padding-vertical">{{producto.prod_descripcionProducto}}</p>
-            <h4>Tamaños y Precios</h4>
+              <h4>Tamaños y Precios</h4>
             <ion-radio
                 name="price"
                 ng-repeat="variedad in variedades"
