--- a/prueba1/www/templates/shopping_cart.html
+++ b/prueba1/www/templates/shopping_cart.html
@@ -1,72 +1,82 @@
 <ion-view style="" class=" " id="page19" title="Su Pedido">
 
     <ion-content class="has-header" padding="true">
-        <div  ng-repeat="item in cart">
-        <div class="cate-lv2">
-            <div class="card cate-lv2-item">
-                <div class="item item-thumbnail-left item-text-wrap">
-                    <img ng-src="{{'img/productos/' + item.producto.prod_imagen}}" />
 
-                    <h2>{{item.producto.prod_nombre}}</h2>                   
-                    <p class="text-left">
-                        {{item.variedad.var_nombre}}: {{ item.variedad.var_precio | currency : item.currency : 2 }} </p>
-<!--DADAD -->
-                   <!-- <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
-                        {{comp.com_nombre}}: {{comp.com_precio| currency : comp.currency : 2 }}
-                    </p> -->
-                    
-                     <div class="product-info">
-                        <div class="price">{{item.price}}</div>
-                        <p>x</p>
-                        <input type="number" class="input-qty" placeholder="" value="{{item.qty}}" />
-                        <a class="product-delete"><i class="ion-android-delete"></i></a>
+        <div ng-if="!vacio">
+            <div  ng-repeat="item in cart">
+                <div class="cate-lv2">
+                    <div class="card cate-lv2-item">
+                        <div class="item item-thumbnail-left item-text-wrap">
+                            <img ng-src="{{ urlpro +'/' + item.producto.prod_imagen}}" />
+
+                            <h2>{{item.producto.prod_nombre}}</h2>                   
+                            <p class="text-left">
+                                {{item.variedad.var_nombre}}: + {{ item.variedad.var_precio | currency : item.currency : 2 }} </p>
+                            <!--DADAD -->
+                            <!-- <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
+                                 {{comp.com_nombre}}: {{comp.com_precio| currency : comp.currency : 2 }}
+                             </p> -->
+
+                            <div class="product-info">
+                                <div class="price">{{item.price}}</div>
+                                <p>x</p>
+                                <input type="number" class="input-qty" placeholder="" value="{{item.qty}}" ng-model="item.qty" min="1" ng-change="changeCant(item.producto.prod_id,item.qty)" ng-Minlength="1" />
+                                <a class="product-delete">
+                                 <i class="ion-android-add "  ng-click=""></i>   
+                                 <i class="ion-android-remove"  ng-click=""></i>                                 
+                                 <i class="ion-android-delete "  ng-click="removeFromCart(item.producto.prod_id)"></i>                                                               
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card cate-lv2-item" ng-repeat="item2 in item.componentes.items">
+                        <div class="item item-thumbnail-left item-text-wrap" >
+                            <img ng-src="{{urlcom+'/' + item2.componente.com_imagen}}" />
+
+                            <h2>{{item2.componente.com_nombre}}</h2>                                     
+                            <!--DADAD -->
+                            <!-- <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
+                                 {{comp.com_nombre}}: {{comp.com_precio| currency : comp.currency : 2 }}
+                             </p> -->
+
+                            <div class="product-info">
+                                <div class="price">{{item2.componente.com_precio}}</div>
+                                <p>x</p>
+                                <input type="number" class="input-qty" placeholder="" value="{{item2.qty}}" />
+                                <a class="product-delete">
+                                     <i class="ion-android-add "  ng-click=""></i>   
+                                     <i class="ion-android-remove"  ng-click=""></i>   
+                                    <i class="ion-android-delete" ng-click="removeFromCartCom(item2.componente.com_id)"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-               
-                
-                
+
             </div>
-            
-             <div class="card cate-lv2-item" ng-repeat="item2 in item.componentes.items">
-             <div class="item item-thumbnail-left item-text-wrap" >
-                    <img ng-src="{{'img/componentes/' + item2.com_imagen}}" />
-
-                    <h2>{{item2.com_nombre}}</h2>                                     
-<!--DADAD -->
-                   <!-- <p class="text-left" ng-repeat="comp in item.componentes.items" style="font-style: italic;">
-                        {{comp.com_nombre}}: {{comp.com_precio| currency : comp.currency : 2 }}
-                    </p> -->
-                    
-                     <div class="product-info">
-                        <div class="price">{{item2.com_precio}}</div>
-                        <p>x</p>
-                        <input type="number" class="input-qty" placeholder="" value="1" />
-                        <a class="product-delete"><i class="ion-android-delete"></i></a>
-                    </div>
-                </div>
-             </div>
-             </div>
-
+            <div class="total-prices">
+                <strong>Subtotal</strong>
+                <span>${{subtotal}}</span>
+                <div class="clearfix"></div>
+            </div>
+            <div class="total-prices">
+                <strong>Envio</strong>
+                <span>$10</span>
+                <div class="clearfix"></div>
+            </div>
+            <div class="total-prices">
+                <strong>Total</strong>
+                <span>${{total}}</span>
+                <div class="clearfix"></div>
+            </div>
+            <div class="btn-checkout">
+                <button class="button button-block button-balanced" ng-click="checkout()">
+                    Checkout
+                </button>
+            </div>
         </div>
-        <div class="total-prices">
-            <strong>Subtotal</strong>
-            <span>${{subtotal}}</span>
-            <div class="clearfix"></div>
-        </div>
-        <div class="total-prices">
-            <strong>Envio</strong>
-            <span>$10</span>
-            <div class="clearfix"></div>
-        </div>
-        <div class="total-prices">
-            <strong>Total</strong>
-            <span>${{total}}</span>
-            <div class="clearfix"></div>
-        </div>
-        <div class="btn-checkout">
-            <button class="button button-block button-balanced" ng-click="checkout()">
-                Checkout
-            </button>
+        <div ng-if="vacio" class="title">
+            Su pedido esta Vacio!
         </div>
     </ion-content>
 </ion-view>
