ionic app carrito 1

--- a/prueba1/www/templates/checkout.html
+++ b/prueba1/www/templates/checkout.html
@@ -39,7 +39,7 @@
 
 
       <button type="submit" class=" button button-calm  button-block icon-right ion-android-arrow-forward ">
-        PAY
+       Confirmar Pedido
       </button>
 
     </form>
