ionic app carrito 1

--- a/prueba1/www/templates/shopping_cart.html
+++ b/prueba1/www/templates/shopping_cart.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cate-lv2" ng-repeat="item2 in item.componentes.items">
+                <div class="cate-lv2" ng-repeat="item2 in item.componentes">
                     <div class="card cate-lv2-item">
                         <div class="item item-thumbnail-left item-text-wrap" >
                           <img ng-src="{{urlcom + '/' + item2.componente.com_imagen}}" />
