ionic app carrito 1

--- a/prueba1/www/templates/support.html
+++ b/prueba1/www/templates/support.html
@@ -10,9 +10,9 @@
           <div class="panel">
             <div class="user-heading round">
               <a href="#">
-                <img  src="img/arjunsk.jpg">
+                <img  src="img/facu.jpg">
               </a>
-              <p style="color: #ffffff;">Arjun SK </p>
+              <p style="color: #ffffff;">ASC Facundo Dominguez</p>
             </div>
           </div>
         </div>
@@ -24,9 +24,9 @@
           <div class="panel">
             <div class="user-heading round">
               <a href="#">
-                <img  src="img/vishnu.jpg">
+                <img  src="img/danilo.jpg">
               </a>
-              <p style="color: #ffffff;">Vishnu Vardhan</p>
+              <p style="color: #ffffff;">Danilo Bustos</p>
             </div>
           </div>
         </div>
