--- a/prueba1/www/templates/settings.html
+++ b/prueba1/www/templates/settings.html
@@ -1,10 +1,5 @@
 <ion-view style="" class=" " id="page12" title="Settings">
     <ion-content class="has-header" padding="false"  >
-
-
-
-
-
       <form name="settingForm" class="list " id="settings-form">
 
         <ion-list class=" " >
@@ -14,9 +9,9 @@
             <div class="panel">
               <div class="user-heading round">
                 <a href="#">
-                  <img ng-src="{{&apos;img/fk/&apos;+ user_info.photoURL +&apos;.jpg&apos;}}" >
+                  <img ng-src="img/facu.jpg" >
                 </a>
-                <p style="color: #ffffff;">{{user_info.displayName}}</p>
+                <p style="color: #ffffff;">{{usuario.nombre}}</p>
               </div>
             </div>
           </div>
@@ -24,7 +19,7 @@
 
           <label class="item item-input ic-selected">
             <a class="icon icon-right ion-android-call" style="margin-right: 10px;"></a>
-            <input style="color: #000;" ng-model="user_extras.telephone" type="text" placeholder="Telephone" >
+            <input style="color: #000;" ng-model="usuario.celular" type="text" placeholder="Telephone" >
           </label>
 
           <label class="item item-input ic-selected">
@@ -51,7 +46,7 @@
           <div class="list card" >
             <div style="min-height: 30px;" class="item item-divider">
                 <a class="icon icon-right ion-ios-location"></a>
-                {{item.nickname}}
+                {{item.dir_nombre}}
                 <div style="float: right;">
                   <a ng-click="addManipulation(item)" class="icon icon-right ion-edit" style="font-size: 20px;"></a>
                   <a ng-click="deleteAddress(item.$id)" class="icon icon-right ion-android-delete" style="font-size: 20px;"></a>
@@ -59,9 +54,8 @@
             </div>
             <div class="item item-body" >
 
-              <span> {{item.address}} </span>
-              <span>Pin: {{item.pin}}</span>
-              <span>Tel: {{item.phone}}</span>
+              <span> Direccion: {{item.dir_direccion}} </span>         
+              <span>Tel: {{item.dir_telefonoFijo}}</span>
 
             </div>
           </div>
