--- a/prueba1/www/templates/settings.html
+++ b/prueba1/www/templates/settings.html
@@ -49,7 +49,7 @@
                 {{item.dir_nombre}}
                 <div style="float: right;">
                   <a ng-click="addManipulation(item)" class="icon icon-right ion-edit" style="font-size: 20px;"></a>
-                  <a ng-click="deleteAddress(item.$id)" class="icon icon-right ion-android-delete" style="font-size: 20px;"></a>
+                  <a ng-click="deleteAddress(item.dir_id)" class="icon icon-right ion-android-delete" style="font-size: 20px;"></a>
                 </div>
             </div>
             <div class="item item-body" >
